--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "express": "^5.2.1",
     "node-fetch": "^3.3.2"
-  }
+  },
+  "name": "my-project",
+  "version": "1.0.0",
+  "type": "module"
 }
