--- a/.github/workflows/upload-generated-file.yml
+++ b/.github/workflows/upload-generated-file.yml
@@ -35,4 +35,4 @@ jobs:
           git commit -m "Add generated file ${{ github.event.inputs.filename }}" || echo "No changes to commit"
           git push
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
