--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsdom": "^27.4.0",
     "node-fetch": "^3.3.2"
   },
   "name": "my-project",
